--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ html, body {
     background-color: #f6eeee;
 }
 
-html {
-    display: table;
-    margin: auto;
-}
-
 body {
-    display: table-cell;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-content: space-around;
+	text-align: center;
+
+	padding-top: 10vh;
 }
